# smartdatamodels-mcp

./: .coverage  .gitignore  CONTRIBUTORS.md  README.md  fastmcpdoc.py  function_call_diagram.md  genesis-history.md  pypi-publish.md  pyproject.toml  sdm-mcp-prez.md  smd-mcp-plublish.md  smd-mcp-prez.md  test_debug.py
.cline/: rules.md
exports/diagrams/: cereal_farm_entities_relationships.md  n8n-smart-data-models.md  smart_data_models_relations.md
img/: cline-scenes_02.avif
logs/: smart-data-models.log.1
mistral/: mistral-agent-4-fiware.md
src/smart_data_models_mcp/: __init__.py  __main__.py  data_access.py  github_repo_analyzer.py  model_generator.py  model_validator.py  server.py
tests/: __init__.py  test_basic.py  test_data_access.py  test_mcp.py
