[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-data-models-mcp"
version = "0.1.0"
description = "MCP server for FIWARE Smart Data Models supporting NGSI-LD"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=0.4.0",
    "pysmartdatamodels>=0.5.0",
    "requests>=2.28.0",
    "jsonschema>=4.17.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
smart-data-models-mcp = "smart_data_models_mcp.server:main"

[project.urls]
Homepage = "https://github.com/smart-data-models"
Repository = "https://github.com/smart-data-models"
Issues = "https://github.com/smart-data-models/data-models/issues"
Documentation = "https://github.com/smart-data-models/data-models/wiki"

[tool.hatch.build.targets.wheel]
packages = ["smart_data_models_mcp"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["smart_data_models_mcp"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
